maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:2: error: ':' expected but ')' found.
def isDirectionFree(dir) {
                       ^Escaper:47: error: identifier expected but '}' found.
}
^